Change title index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Tekst piosenki</title>
+        <title>Tekst piosenki What a wonderful world</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
